--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '3.3.5'
+	implementation group: 'io.rsocket', name: 'rsocket-core', version: '1.1.4'
+
 
 }
 
