--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -30,7 +30,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '3.3.5'
+	// https://mvnrepository.com/artifact/io.projectreactor/reactor-test
+	testImplementation group: 'io.projectreactor', name: 'reactor-test', version: '3.7.0'
 	implementation group: 'io.rsocket', name: 'rsocket-core', version: '1.1.4'
+	// https://mvnrepository.com/artifact/junit/junit
+	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+
 
 
 }
