--- a/pickyami/build.gradle
+++ b/pickyami/build.gradle
@@ -33,6 +33,18 @@ dependencies {
 	// https://mvnrepository.com/artifact/io.projectreactor/reactor-test
 	testImplementation group: 'io.projectreactor', name: 'reactor-test', version: '3.7.0'
 	implementation group: 'io.rsocket', name: 'rsocket-core', version: '1.1.4'
+
+
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.0'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+	implementation 'org.springframework.security:spring-security-web:6.3.0'
+	implementation 'org.springframework.security:spring-security-core:6.3.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
 tasks.named('test') {
