--- a/pickyami/build.gradle
+++ b/pickyami/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-web:6.3.0'
 	implementation 'org.springframework.security:spring-security-core:6.3.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+	runtimeOnly 'org.postgresql:postgresql'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
